--- a/up2secure/templates/server/servers.html
+++ b/up2secure/templates/server/servers.html
@@ -69,8 +69,7 @@
 		</div>
 		<div>
 			<b>Installation script</b><br/>
-			<small>To add new server within seconds. Run the following command as a root user on machine you want to add.</small>
-			<p>&nbsp;</p>
+			<small>To add new server within seconds run the following command as a root user on machine you want to add.</small>
 			<div class="input-group">
 					<input id="copyTarget" type="text" class="form-control" value="{{ install_script }}">
 					<span style="cursor:pointer;" title="Copy to clipboard!" id="copyButton" class="input-group-addon"><i class="fa fa-clipboard"></i></span>
