--- a/up2secure/templates/userland/profile_base.html
+++ b/up2secure/templates/userland/profile_base.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-4">
 
     <div class="box box-primary">
       <div class="box-body box-profile">
@@ -17,10 +17,20 @@
           <p><b>Server Limit</b> <a class="pull-right">{{ user.profile.server_limit }}</a></p>
         {% endif %}
 
+        <table style="width:100%;">
+          <tr>
+            <td>Since: </td>
+            <td class="text-right">{{ user.date_joined }}</td>
+          </tr>
+          <tr>
+            <td>Last login: </td>
+            <td class="text-right">{{ user.last_login }}</td>
+          </tr>
+        </table>
       </div>
     </div>
   </div>
-  <div class="col-md-9">
+  <div class="col-md-8">
     {% block profile_inner %}{% endblock profile_inner %}
   </div>
 </div>
