--- a/up2secure/templates/server/server_detail.html
+++ b/up2secure/templates/server/server_detail.html
@@ -64,7 +64,7 @@
 						</tr>
 						<tr>
 							<td>Port</td>
-							<td>{{ object.port }}</td>
+							<td>{{ object.ssh_port }}</td>
 						</tr>
 						{% if request.user.profile.account_type > 0 %}
 						<tr>
