--- a/serverup/templates/dashboard.html
+++ b/serverup/templates/dashboard.html
@@ -69,7 +69,7 @@
     <div class="col-lg-3 col-xs-6">
       <div class="small-box bg-yellow">
         <div class="inner">
-          <h3>0</h3>
+          <h3>{{ available_updates }}</h3>
           <p>Available updates</p>
         </div>
         <div class="icon">
