--- a/serverup/templates/server/server_detail.html
+++ b/serverup/templates/server/server_detail.html
@@ -152,13 +152,51 @@
 		</div>
 	</div>
 </div>
+
+<div class="row">
+	<div class="col-xs-12">
+	</div>
+</div>
+
+{% if updates %}
+<div class="row">
+	<div class="col-xs-12">
+		<div class="box">
+			<div class="box-header with-border">
+				<h3 class="box-title">Updates</h3>
+			</div>
+			<div class="box-body no-padding">
+				<table class="table table-bordered table-hover">
+					<thead>
+						<tr>
+							<th>Package name</th>
+							<th>Package version</th>
+							<th>Status</th>
+						</tr>
+					</thead>
+					<tbody>
+						{% for update in updates %}
+						<tr>
+							<td>{{ update.package.name }}</td>
+							<td>{{ update.version }}</td>
+							<td>{{ update.show_status|safe }}</td>
+						</tr>
+						{% endfor %}
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+</div>
+{% endif %}
+
 <div class="row">
 	<div class="col-xs-12">
 		<div class="box">
 			<div class="box-header with-border">
 				<h3 class="box-title">History</h3>
 			</div>
-			<div class="box-body">
+			<div class="box-body text-center">
 			No history yet.
 			</div>
 		</div>
