--- a/serverup/templates/server/server_detail.html
+++ b/serverup/templates/server/server_detail.html
@@ -171,7 +171,7 @@
 						<tr>
 							<th>Package name</th>
 							<th>Package version</th>
-							<th>Status</th>
+							<th>Action</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -179,7 +179,15 @@
 						<tr>
 							<td>{{ update.package.name }}</td>
 							<td>{{ update.version }}</td>
-							<td>{{ update.show_status|safe }}</td>
+							<td>
+							<div class="onoffswitch">
+								<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="switch_{{ update.pk }}" checked>
+								<label class="onoffswitch-label" for="switch_{{ update.pk }}">
+									<span class="onoffswitch-inner"></span>
+									<span class="onoffswitch-switch"></span>
+								</label>
+							</div>
+							</td>
 						</tr>
 						{% endfor %}
 					</tbody>
