add ignore field and add status to package update, show update/ignore switch status

--- a/serverup/templates/server/packageupdate_list.html
+++ b/serverup/templates/server/packageupdate_list.html
@@ -40,7 +40,7 @@
 						<td>{{ update.version }}</td>
 						<td>
 						<div class="onoffswitch">
-							<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="switch_{{ update.pk }}" checked>
+							<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="switch_{{ update.pk }}" {{ update.check_ignore }}>
 							<label class="onoffswitch-label" for="switch_{{ update.pk }}">
 								<span class="onoffswitch-inner"></span>
 								<span class="onoffswitch-switch"></span>
