--- a/serverup/templates/server/server_detail.html
+++ b/serverup/templates/server/server_detail.html
@@ -35,7 +35,7 @@
 			<div class="box-header with-border">
 				<h3 class="box-title">Server information</h3>
 			</div>
-			<div class="box-body">
+			<div class="box-body no-padding">
 				<table class="table table-bordered">
 					<tbody>
 						<tr>
@@ -170,7 +170,7 @@
 					<thead>
 						<tr>
 							<th>Package name</th>
-							<th>Package version</th>
+							<th>Version</th>
 							<th>Action</th>
 						</tr>
 					</thead>
@@ -181,7 +181,7 @@
 							<td>{{ update.version }}</td>
 							<td>
 							<div class="onoffswitch">
-								<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="switch_{{ update.pk }}" checked>
+								<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="switch_{{ update.pk }}" {{ update.check_ignore }}>
 								<label class="onoffswitch-label" for="switch_{{ update.pk }}">
 									<span class="onoffswitch-inner"></span>
 									<span class="onoffswitch-switch"></span>
