make manual update async, pep8, display update interval on server detail page

--- a/serverup/static/overtone.css
+++ b/serverup/static/overtone.css
@@ -102,7 +102,7 @@ table.packages_updates .onoffswitch {
 }
 .automanualup .onoffswitch-inner:before, .automanualup .onoffswitch-inner:after {
     display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
-    font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+    font-size: 14px; color: white; font-weight: bold;
     box-sizing: border-box;
 }
 .automanualup .onoffswitch-inner:before {
