add history events, restrict servers display on servers list

--- a/serverup/templates/login.html
+++ b/serverup/templates/login.html
@@ -38,7 +38,7 @@
   <div class="login-box">
     
     <div class="login-logo">
-      <b>Up2</b>Secure
+      Welcome to ServerUP
     </div>
 
     <div class="login-box-body">
