--- a/serverup/templates/base.html
+++ b/serverup/templates/base.html
@@ -166,7 +166,7 @@
 
         <li class="{% block menu_accounting %}{% endblock %}">
           <a href="{% url 'accounting' %}">
-            <i class="fa fa-usd"></i> <span>Accounting</span>
+            <i class="fa fa-euro"></i> <span>Accounting</span>
           </a>
         </li>
 <!-- 
