--- a/serverup/templates/server/packageupdate_list.html
+++ b/serverup/templates/server/packageupdate_list.html
@@ -31,7 +31,7 @@ function change_ignore(id) {
   <div class="col-md-12">
 	<div class="box">
 		<div class="box-header">
-		  <h3 class="box-title">Available updates for all servers</h3>
+		  <h3 class="box-title">Available updates from all servers</h3>
 		</div>
 		<div class="box-body no-padding">
 			<table class="packages_updates table table-hover">
