--- a/serverup/templates/userland/customer_list.html
+++ b/serverup/templates/userland/customer_list.html
@@ -28,11 +28,31 @@
       <form action="{% url 'create_customer' %}" method="POST">
       {% csrf_token %}
       <div class="modal-body">
+
         {{ user_form|as_bootstrap }}
+
         <p>
-        <label for="password">Password</label>
-        <input type="text" id="password" class="form-control" name="password">
+          <label for="password">Password</label>
+          <input type="text" id="password" class="form-control" name="password" required>
         </p>
+
+        {% if user.profile.account_type == 2 %}
+        <p>
+          <label for="reseller">Reseller</label>
+          <select class="form-control" id="reseller" name="reseller">
+              <option value="">---</option>
+            {% for reseller in resellers %}
+              <option value="{{ reseller.user.pk }}">{{ reseller.user }}</option>
+            {% endfor %}
+          </select>
+        </p>
+        {% endif %}
+
+        <p>
+          <label for="servers_limit">Servers limit</label>
+          <input class="form-control" name="servers_limit" type="number" min="1" value="1" required>
+        </p>
+
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -72,7 +92,7 @@
             </tr>
             {% empty %}
             <tr>
-              <td colspan="5">No customers.</td>
+              <td colspan="7">No customers.</td>
             </tr>
             {% endfor %}
         </tbody>
