--- a/serverup/templates/dashboard.html
+++ b/serverup/templates/dashboard.html
@@ -37,7 +37,7 @@
       <div class="col-lg-3 col-xs-6">
         <div class="small-box bg-green">
           <div class="inner">
-            <h3>0</h3>
+            <h3>{{ resellers_count }}</h3>
             <p>Resellers</p>
           </div>
           <div class="icon">
@@ -53,7 +53,7 @@
       <div class="col-lg-3 col-xs-6">
         <div class="small-box bg-aqua">
           <div class="inner">
-            <h3>0</h3>
+            <h3>{{ customers_count|default:0 }}</h3>
             <p>Customers</p>
           </div>
           <div class="icon">
@@ -69,7 +69,7 @@
     <div class="col-lg-3 col-xs-6">
       <div class="small-box bg-yellow">
         <div class="inner">
-          <h3>{{ updates_count }}</h3>
+          <h3>{{ updates_count|default:0 }}</h3>
           <p>Available updates</p>
         </div>
         <div class="icon">
