add new server event, start accounting, fix (server_limit -> servers_limit)

--- a/serverup/templates/userland/accounting.html
+++ b/serverup/templates/userland/accounting.html
@@ -14,7 +14,12 @@
 {% endblock contentheader %}
 
 {% block content %}
-Soon ...
+	<p>
+		Your balance: {{ user.customer.credits }} credits.
+	</p>
+	<p>
+		<a href="#" class="btn btn-primary">Top up!</a>
+	</p>
 {% endblock content %}
 
 {% block extendfoot %}{% endblock extendfoot %}
